# monte-carlo-portfolio-sampler

./: .gitignore  README.md
docs/: Aula17.pdf.gpg  finance_concepts.md
python/: README.md  data_loader.py  financial_history_data_dev.pkl  main.py  pyproject.toml  simulate.py
python/speed_analysis/: combinations.py  data.pkl  generate_weights.py  maximize_sharpe.py  maximize_sharpe_profile.prof
