[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Massive Parallel Simulation of 25-Stock Portfolios from the Dow Jones Industrial Average using Functional Programming"
authors = [
    {name = "Gabriel Onishi",email = "gabriel.onishi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.56,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 120

extend-select = ["I"]