[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Massive Parallel Simulation of 25-Stock Portfolios from the Dow Jones Industrial Average using Functional Programming"
authors = [
    {name = "Gabriel Onishi",email = "gabriel.onishi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.56,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "snakeviz (>=2.2.2,<3.0.0)",
    "ruff (>=0.11.12,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'